--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.44.4",
+    "autoprefixer": "^10.4.19",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
